src/extensions/default/bramble/stylesheets/sidebarTheme.less
/* ... */
span#project-title.title {
    display: none;
}

div.working-set-option-btn[style] {
    display: none !important;
}

#sidebar {
    background-color: black;
    text-shadow: none;
}

[data-theme='light-theme'] #sidebar {
    background-color: rgba(0,0,0,.2);
    text-shadow: none;
}

#project-files-header {
    display: none;
}

#project-files-container {
    padding: 12px 0 0 0;
    font-weight: 400;
    font-family: "Open Sans", "Helvetica Neue", sans-serif;
}

#project-files-container ul {
    padding: 0 !important;
}


/* File tree basic styles */

li.jstree-leaf {
    min-height: 37px;
}

li.jstree-leaf a span,
li.jstree-leaf span.extension {
    font-size: 15px;
    color: rgba(255,255,255,.5);
}

li.jstree-closed > a span,
li.jstree-open > a span {
    font-size: 15px;
    color: rgba(255,255,255,.7);
}


body[data-theme='light-theme'] li.jstree-leaf a span,
body[data-theme='light-theme'] li.jstree-leaf span.extension,
body[data-theme='light-theme'] li.jstree-closed > a span,
body[data-theme='light-theme'] li.jstree-open > a span {
    color: rgba(0,0,0,.6);
}


/* Overrides not needed margin */

.jstree-brackets li.jstree-leaf,
.jstree-brackets li.jstree-closed,
.jstree-brackets li.jstree-open {
    margin-left: 0;
}


/* Basic formatting of all items in file menu */

li.jstree-open a,
li.jstree-closed a,
li.jstree-leaf a {
    padding: 12px 10px 12px 40px;
    cursor: pointer !important;
    box-shadow: none;
}


/* Hides the 'spacing indenter' that the filetree adds into
   into items in folders */

li.jstree-leaf a > div,
li.jstree-open a > div,
li.jstree-closed a > div,
li.jstree-leaf div,
li.jstree-open div,
li.jstree-closed div {
    display: none !important;
}


/* Folders get bold text treatment */

li.jstree-open > a,
li.jstree-closed > a {
    font-weight: 600;
}


/* Selected Item */

li.jstree-leaf a.selected-node,
li.jstree-leaf a.selected-node span,
li.jstree-leaf a.selected-node:hover .extension,
li.jstree-leaf a.selected-node .extension {
    color: white;
}

[data-theme='light-theme'] li.jstree-leaf a.selected-node,
[data-theme='light-theme'] li.jstree-leaf a.selected-node span,
[data-theme='light-theme'] li.jstree-leaf a.selected-node:hover .extension,
[data-theme='light-theme'] li.jstree-leaf a.selected-node .extension {
    color: black;
}



/* Hover state for all items */

li.jstree-leaf:hover a:not(.selected-node),
li.jstree-closed:hover a:first-of-type {
    background: rgba(255,255,255,.08);
}


li.jstree-open > a:first-of-type:hover {
    background: rgba(255,255,255,.08);
}


[data-theme='light-theme'] li.jstree-leaf:hover a:not(.selected-node),
[data-theme='light-theme'] li.jstree-open:hover a:first-of-type,
[data-theme='light-theme'] li.jstree-closed:hover a:first-of-type {
    background: rgba(0,0,0,.08);
}


/* Hover state item text */

li.jstree-open > a span,
li.jstree-closed > a span {
    color: rgba(255,255,255,.7);
}

.menuToggle {
    position: absolute;
    right: 6px;
    top: 7px;
    height: 27px;
    width: 26px;
    cursor: pointer;
    background-image: url(../images/arrow-down-light.svg);
    background-size: 10px;
    background-position: center;
    background-repeat: no-repeat;
    display: none;
    border-radius: 1px;

    &:hover {
        background-color: rgba(0,0,0,.6);
        opacity: .7;
    }

    &.toggle-open {
        display: block;
        opacity: 1 !important;
        background-color: white !important;
        background-image: url(../images/arrow-down-dark.svg);
    }
}

.jstree-leaf a:hover ,
.jstree-closed a:hover,
.jstree-open a:hover {
    .menuToggle {
        opacity: .5;
        display: block;
    }
}

.selected-node + .menuToggle {
    display: block;
    opacity: .5;
}


[data-theme='light-theme'] li.jstree-leaf a:not(.selected-node):hover > span {
    color: rgba(0,0,0,.6);
}

[data-theme='light-theme'] li.jstree-open > a span,
[data-theme='light-theme'] li.jstree-closed > a span {
    color: rgba(0,0,0,.7);
}


/* Message for when there are no files in a folder */

li.jstree-open > ul:empty:after {
    content: "This folder is empty";
    color: rgba(255,255,255,.4);
    padding: 10px 10px 10px 30px;
    font-style: italic;
    display: block;
}

[data-theme='light-theme'] li.jstree-open > ul:empty:after {
    color: rgba(0,0,0,.4);
}


/* Right-clicked file */

li.jstree-closed a.context-node,
li.jstree-open a.context-node,
li.jstree-leaf a.context-node {
    background: rgba(255,255,255,.08);
}

li.jstree-closed a.context-node span,
li.jstree-open a.context-node span,
li.jstree-leaf a.context-node span {
    // color: rgba(255,255,255,.6);
}


[data-theme='light-theme'] li.jstree-closed a.context-node,
[data-theme='light-theme'] li.jstree-open a.context-node,
[data-theme='light-theme'] li.jstree-leaf a.context-node {
    background: rgba(0,0,0,.08);
}

/* Currently selected (edited) file */

li.jstree-leaf a.selected-node {
  background: #222;

  span {
    color: white;
  }
}

body[data-theme='light-theme'] li.jstree-leaf a.selected-node,
body[data-theme='light-theme'] li.jstree-leaf a.selected-node:hover {
    background: white;
}


/* Adds icon for folders only icon */

.jstree-brackets li.jstree-closed > .jstree-icon,
.jstree-brackets li.jstree-open > .jstree-icon {
    transition: transform .15s ease-out !important;
    top: 11px;
    left: 14px !important;
    margin: 0 !important;
    background-image: url(../images/folder-arrow.svg);
    background-color: transparent;
    background-position: center;
    background-size: 7px;
    background-repeat: no-repeat;
    cursor: pointer;
    opacity: .8;
    filter: none;
}


/* Opened folder gets a lighter icon */

.jstree-brackets li.jstree-open > .jstree-icon {
    opacity: 1;
}


/* Hides file icon for non-folders */

.jstree-brackets li.jstree-leaf > .jstree-icon {
    display: none;
}


/* Indents files within a folder */

.jstree-open > ul {
    margin-left: 26px;
}
/* ... */

